--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  CHANGES:

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

  IMPROVEMENTS:

    * ``bzr init`` and ``bzr init-repo`` will now print out the same as
      ``bzr info`` if it completed successfully.
      (Marius Kruger)

  BUG FIXES:

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

  INTERNALS:

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)


bzr 1.6rc3 2008-08-14
---------------------

  CHANGES:

    * Disable reading ``.bzrrules`` as a per-branch rule preferences
      file. The feature was not quite ready for a full release.
      (Robert Collins)

  IMPROVEMENTS:

    * Update the windows installer to bundle TortoiseBzr and ``qbzr``
      into the standalone installer. This will be the first official
      windows release that installs Tortoise by default.
      (Mark Hammond)

  BUG FIXES: 

    * Fix a regression in ``bzr+http`` support. There was a missing
      function (``_read_line``) that needed to be carried over from
      ``bzr+ssh`` support. (Andrew Bennetts)

    * ``GraphIndex`` objects will internally read an entire index if more